--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^5.5.1",
     "expo": "~37.0.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "react-moment": "^0.9.7",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
