fixing popups warnings and creating add component

--- a/package.json
+++ b/package.json
@@ -12,19 +12,26 @@
     "@react-navigation/drawer": "^5.8.2",
     "@react-navigation/native": "^5.5.1",
     "expo": "~37.0.3",
+    "lodash": "^4.17.15",
     "moment": "^2.26.0",
     "native-base": "^2.13.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-elements": "^2.0.2",
+    "react-native-dropdown": "0.0.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
     "react-native-paper": "^3.10.1",
+    "react-native-image-slider-box": "^1.0.12",
     "react-native-reanimated": "^1.9.0",
+    "react-native-maps": "^0.27.1",
     "react-native-safe-area-context": "0.7.3",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-screens": "^2.8.0",
     "react-native-ui-xg": "0.0.6",
+    "react-native-svg": "^12.1.0",
     "react-native-web": "~0.11.7",
     "expo-image-picker": "~8.1.0"
   },
