--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
     "@react-navigation/drawer": "^5.8.2",
     "@react-navigation/native": "^5.5.1",
     "expo": "~37.0.3",
+    "expo-image-picker": "~8.1.0",
     "moment": "^2.26.0",
     "native-base": "^2.13.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-elements": "^2.0.2",
+    "react-native-email": "^1.1.0",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-image-picker": "^2.3.1",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "^2.8.0",
     "react-native-ui-xg": "0.0.6",
-    "react-native-web": "~0.11.7",
-    "expo-image-picker": "~8.1.0"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
