--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-dropdown": "0.0.6",
     "react-native-elements": "^2.0.2",
+    "react-native-email": "^1.1.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
     "react-native-image-slider-box": "^1.0.12",
@@ -37,8 +38,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-ui-xg": "0.0.6",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7",
-    "react-native-webview": "9.4.0"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
